argocd/arr/searcharr/templates/bazarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr-deployment
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: appdata-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      containers:
      - name: bazarr
        image: linuxserver/bazarr
        resources:
          requests:
            memory: "4G"
          limits:
            memory: "4G"
        ports:
        - containerPort: 6767
        volumeMounts:
        - mountPath: "/movies"
          subPath: "Movies"
          name: media
        - mountPath: "/tv"
          subPath: "TV"
          name: media
        - mountPath: "/config"
          subPath: "qbt/bazarr/config"
          name: appdata

---
apiVersion: v1
kind: Service
metadata:
  name: bazarr-service
spec:
  selector:
    app: bazarr
  ports:
    - name: http
      protocol: TCP
      port: 6767
      targetPort: 6767

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: bazarr-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ryougi.ca
  rules:
  - host: bazarr.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr-service
            port:
              number: 6767
  - host: bazarr.home.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr-service
            port:
              number: 6767
