argocd/arr/searcharr/templates/nzb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzb-deployment
  labels:
    app: nzb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzb
  template:
    metadata:
      labels:
        app: nzb
    spec:
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: appdata-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      containers:
      - name: nzb
        image: binhex/arch-sabnzbdvpn
        securityContext:
          capabilities:
            add: ["NET_ADMIN", "SYS_TIME"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/Media"
          name: media
        - mountPath: "/data"
          subPath: "qbt/nzb/data"
          name: appdata
        - mountPath: "/config"
          subPath: "qbt/nzb/config"
          name: appdata


---
apiVersion: v1
kind: Service
metadata:
  name: nzb-service
spec:
  selector:
    app: nzb
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host $host;
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
  name: nzb-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ryougi.ca
  rules:
  - host: nzb.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nzb-service
            port:
              number: 8080
  - host: nzb.home.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nzb-service
            port:
              number: 8080
