argocd/arr/searcharr/templates/overseerr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr-deployment
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: appdata-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      containers:
      - name: overseerr
        image: lscr.io/linuxserver/overseerr
        ports:
        - containerPort: 5055
        volumeMounts:
        - mountPath: "/config"
          subPath: "qbt/overseerr/config"
          name: appdata

---
apiVersion: v1
kind: Service
metadata:
  name: overseerr-service
spec:
  selector:
    app: overseerr
  ports:
    - name: http
      protocol: TCP
      port: 5055
      targetPort: 5055

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: overseerr-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ryougi.ca
  rules:
  - host: overseerr.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr-service
            port:
              number: 5055
  - host: overseerr.home.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr-service
            port:
              number: 5055
