argocd/arr/searcharr/templates/radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-deployment
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: appdata-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      containers:
      - name: radarr
        image: binhex/arch-radarr
        resources:
          requests:
            memory: "4G"
          limits:
            memory: "4G"
        ports:
        - containerPort: 7878
        volumeMounts:
        - mountPath: "/Media"
          subPath: "Movies"
          name: media
        - mountPath: "/data"
          subPath: "qbt/qbt/config/qBittorrent/downloads"
          name: appdata
        - mountPath: "/config"
          subPath: "qbt/radarr/config"
          name: appdata

---
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
spec:
  selector:
    app: radarr
  ports:
    - name: http
      protocol: TCP
      port: 7878
      targetPort: 7878

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: radarr-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ryougi.ca
  rules:
  - host: radarr.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr-service
            port:
              number: 7878
  - host: radarr.home.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr-service
            port:
              number: 7878
