argocd/arr/searcharr/templates/sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-deployment
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: appdata-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
      containers:
      - name: sonarr
        image: binhex/arch-sonarr
        ports:
        - containerPort: 8989
        volumeMounts:
        - mountPath: "/Media"
          subPath: "TV"
          name: media
        - mountPath: "/data"
          subPath: "qbt/qbt/config/qBittorrent/downloads"
          name: appdata
        - mountPath: "/config"
          subPath: "qbt/sonarr/config"
          name: appdata

---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
spec:
  selector:
    app: sonarr
  ports:
    - name: http
      protocol: TCP
      port: 8989
      targetPort: 8989

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: sonarr-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ryougi.ca
  rules:
  - host: sonarr.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-service
            port:
              number: 8989
  - host: sonarr.home.ryougi.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-service
            port:
              number: 8989
